API update